cc_library(
    name = "deps",
    srcs = glob([
        "*.cc",
        "*.c",
    ]),
    hdrs = glob(["*.h"]),
)

cc_binary(
    name = "main",
    srcs = ["main.cc"],
    deps = [
        ":deps",
    ],
)

cc_binary(
    name = "hello",
    srcs = ["hello.c"],
    deps = [
        ":deps",
    ],
)

cc_binary(
    name = "comp",
    srcs = ["comp.c"],
    deps = [
        ":deps",
    ],
)

cc_binary(
    name = "hello2",
    srcs = ["hello2.c"],
    deps = [
        ":deps",
    ],
)

cc_test(
    name = "test",
    srcs = ["test/test.cc"],
    deps = [":deps"],
)
